--- a/index.html
+++ b/index.html
@@ -5,98 +5,141 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>WebStudio</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
-	<body>
-		<header>
+	<body class="page">
+		<!-- Site nav -->
+		<header class="page-header">
 			<nav>
-				<a href="/">WebStudio</a>
-				<ul>
-					<li><a href="">Студія</a></li>
-					<li><a href="">Портфоліо</a></li>
-					<li><a href="">Контакти</a></li>
+				<!-- prettier-ignore -->
+				<a lang="en" href="/" class="page-logo link">
+					<span class="page-blue-logo">Web</span>Studio
+				</a>
+				<ul class="site-nav-list list">
+					<li><a href="" class="site-nav-item link current">Студія</a></li>
+					<li><a href="./portfolio.html" class="site-nav-item link current">Портфоліо</a></li>
+					<li><a href="" class="site-nav-item link current">Контакти</a></li>
 				</ul>
 			</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+
+			<ul class="contacts-nav-list list">
+				<li><a href="mailto:info@devstudio.com" class="contacts-nav-item link">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="contacts-nav-item link">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
+
 		<main>
-			<section>
-				<h1>Ефективні рішення для вашого бізнесу</h1>
-				<button type="button">Замовити послугу</button>
+			<section class="hero">
+				<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+				<button type="button" class="hero-btn btn">Замовити послугу</button>
 			</section>
-			<section>
-				<!-- Цінності -->
-				<ul>
+
+			<!-- Values -->
+			<section class="value">
+				<h2 class="visually-hidden">Цінності</h2>
+				<ul class="value-list list">
 					<li>
-						<h4>Увага до деталей</h4>
-						<p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+						<h4 class="value-item">Увага до деталей</h4>
+						<p class="value-text">
+							Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+						</p>
 					</li>
 					<li>
-						<h4>Пунктуальність</h4>
-						<p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+						<h4 class="value-item">Пунктуальність</h4>
+						<p class="value-text">
+							Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+						</p>
 					</li>
 					<li>
-						<h4>Планування</h4>
-						<p>Так само консультація з широким активом значною мірою зумовлює.</p>
+						<h4 class="value-item">Планування</h4>
+						<p class="value-text">Так само консультація з широким активом значною мірою зумовлює.</p>
 					</li>
 					<li>
-						<h4>Сучасні технології</h4>
-						<p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+						<h4 class="value-item">Сучасні технології</h4>
+						<p class="value-text">
+							Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+						</p>
 					</li>
 				</ul>
 			</section>
-			<section>
-				<h2>Чим ми займаємось</h2>
-				<ul>
-					<li><img src="./images/main-page-img-1.jpg" alt="Клавіатура та айпад" width="370" height="294" /></li>
+
+			<!-- Activities -->
+			<section class="activities">
+				<h2 class="activities-title title">Чим ми займаємось</h2>
+				<ul class="activities-list list">
+					<li>
+						<img src="./images/main-page-img-1.jpg" alt="Клавіатура та айпад" width="370" height="294" />
+					</li>
 					<li><img src="./images/main-page-img-2.jpg" alt="Айфон та дизайн" width="370" height="294" /></li>
 					<li><img src="./images/main-page-img-3.jpg" alt="Колірна схема" width="370" height="294" /></li>
 				</ul>
 			</section>
-			<section>
-				<h2>Наша команда</h2>
-				<ul>
-					<li>
+
+			<!-- Team -->
+			<section class="team">
+				<h2 class="team-title title">Наша команда</h2>
+				<ul class="team-list list">
+					<li class="team-item">
 						<img src="./images/demianenko.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-						<h3>Ігор Дем'яненко</h3>
-						<p>Product Designer</p>
+						<h3 class="team-item-title">Ігор Дем'яненко</h3>
+						<p class="team-item-text">Product Designer</p>
 					</li>
-					<li>
+					<li class="team-item">
 						<img src="./images/repina.jpg" alt="Ольга Репина" width="270" height="260" />
-						<h3>Ольга Рєпіна</h3>
-						<p>Frontend Developer</p>
+						<h3 class="team-item-title">Ольга Рєпіна</h3>
+						<p class="team-item-text">Frontend Developer</p>
 					</li>
-					<li>
+					<li class="team-item">
 						<img src="./images/tarasov.jpg" alt="Николай Тарасов" width="270" height="260" />
-						<h3>Микола Тарасов</h3>
-						<p>Marketing</p>
+						<h3 class="team-item-title">Микола Тарасов</h3>
+						<p class="team-item-text">Marketing</p>
 					</li>
-					<li>
+					<li class="team-item">
 						<img src="./images/ermakov.jpg" alt="Михаил Ермаков" width="270" height="260" />
-						<h3>Михайло Єрмаков</h3>
-						<p>UI Designer</p>
+						<h3 class="team-item-title">Михайло Єрмаков</h3>
+						<p class="team-item-text">UI Designer</p>
 					</li>
 				</ul>
 			</section>
 		</main>
-		<footer>
-			<a href="/">WebStudio</a>
-			<!-- Контакти -->
-			<address>
-				<ul>
-					<li>
-						<a href="https://goo.gl/maps/21FP2kessVp6qN1R9" target="_blank" rel="noopener noreferrer nofollow">
-							м. Київ, пр-т Лесі Українки, 26
-						</a>
-					</li>
-					<li>
-						<a href="mailto:info@example.com">info@example.com</a>
-					</li>
-					<li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
-				</ul>
-			</address>
+
+		<footer class="footer">
+			<!-- prettier-ignore -->
+			<a lang="en" href="/" class="footer-logo link">
+				<span class="page-blue-logo">Web</span><span>Studio</span>
+			</a>
+
+			<!-- Contacts -->
+			<section class="contacts">
+				<h2 class="visually-hidden">Контакти</h2>
+				<address class="address">
+					<ul class="contacts-list list">
+						<li>
+							<a
+								class="contacts-address link"
+								href="https://goo.gl/maps/21FP2kessVp6qN1R9"
+								target="_blank"
+								rel="noopener noreferrer nofollow"
+							>
+								м. Київ, пр-т Лесі Українки, 26
+							</a>
+						</li>
+						<li>
+							<a href="mailto:info@example.com" class="footer-contacts link">info@example.com</a>
+						</li>
+						<li><a href="tel:+380991111111" class="footer-contacts link">+38 099 111 11 11</a></li>
+					</ul>
+				</address>
+			</section>
 		</footer>
 	</body>
 </html>
