Update logo link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<header class="page-header">
 			<nav>
 				<!-- prettier-ignore -->
-				<a lang="en" href="/" class="page-logo link">
+				<a lang="en" href="./index.html" class="page-logo link">
 					<span class="page-blue-logo">Web</span>Studio
 				</a>
 				<ul class="site-nav-list list">
@@ -114,7 +114,7 @@
 
 		<footer class="footer">
 			<!-- prettier-ignore -->
-			<a lang="en" href="/" class="footer-logo link">
+			<a lang="en" href="./index.html" class="footer-logo link">
 				<span class="page-blue-logo">Web</span><span>Studio</span>
 			</a>
 
