--- a/portfolio.html
+++ b/portfolio.html
@@ -35,11 +35,11 @@
 			<section class="portfolio">
 				<h1 class="visually-hidden">Портфоліо</h1>
 				<ul class="filter-list list">
-					<li><button type="button" class="filter-btn">Всі</button></li>
-					<li><button type="button" class="filter-btn">Веб-сайти</button></li>
-					<li><button type="button" class="filter-btn">Додатки</button></li>
-					<li><button type="button" class="filter-btn">Дизайн</button></li>
-					<li><button type="button" class="filter-btn">Маркетинг</button></li>
+					<li><button type="button" class="filter-btn btn">Всі</button></li>
+					<li><button type="button" class="filter-btn btn">Веб-сайти</button></li>
+					<li><button type="button" class="filter-btn btn">Додатки</button></li>
+					<li><button type="button" class="filter-btn btn">Дизайн</button></li>
+					<li><button type="button" class="filter-btn btn">Маркетинг</button></li>
 				</ul>
 
 				<ul class="filter-result-list list">
